[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/enemy1.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/images/splat3.png" type="Texture" id=3]
[ext_resource path="res://assets/images/splat1.png" type="Texture" id=4]
[ext_resource path="res://assets/images/splat4.png" type="Texture" id=5]
[ext_resource path="res://assets/images/splat5.png" type="Texture" id=6]
[ext_resource path="res://assets/images/splat2.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.1249, 16.7618 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), null ],
"loop": false,
"name": "splat",
"speed": 30.0
} ]

[node name="Enemy" type="Area2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SplatOffset" type="Node2D" parent="."]
rotation = -0.127409
scale = Vector2( 1, 1 )

[node name="Splat" type="AnimatedSprite" parent="SplatOffset"]
visible = false
position = Vector2( 0, -30 )
frames = SubResource( 2 )
animation = "splat"

[node name="Splat2" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 2 )
animation = "splat"
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="animation_finished" from="SplatOffset/Splat" to="." method="_on_Splat_animation_finished"]
[connection signal="animation_finished" from="Splat2" to="." method="_on_Splat_animation_finished"]
